[package]
name = "test-knapsack-algos"
version = "0.1.0"
edition = "2021"
authors = ["Hugh Brown <hughdbrown@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
knapsack_utils = {git = "https://github.com/hughdbrown/knapsack_utils.git" }
prng = {git = "https://github.com/hughdbrown/prng.git" }

exhaustive-search = {git = "https://github.com/hughdbrown/exhaustive-search.git" }
branch-and-bound = {git = "https://github.com/hughdbrown/branch-and-bound.git" }
rods-technique = {git = "https://github.com/hughdbrown/rods-technique.git" }
dynamic-programming = {git = "https://github.com/hughdbrown/dynamic-programming.git" }
